# zbot_franka

./: README.md
zbot_franka/: CMakeLists.txt  package.xml
zbot_franka_control/: CMakeLists.txt  package.xml
zbot_franka_control/config/: ros2_control_gazebo.yaml
zbot_franka_control/launch/: load_controllers_gazebo.launch.py
zbot_franka_control/src/: joint_state_to_control.cpp  joint_state_to_control_action_client.cpp  joint_state_to_control_pub.cpp
zbot_franka_description/: CMakeLists.txt  package.xml
zbot_franka_description/launch/: description.launch.py  visualize.launch.py
zbot_franka_description/urdf/: hand.xacro  panda.gazebo.xacro  panda.ros2_control.xacro  panda.urdf.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_main.urdf.xacro  panda_moveit2.urdf.xacro
zbot_franka_gazebo/: CMakeLists.txt  package.xml
zbot_franka_gazebo/launch/: view_robot.launch.py
zbot_franka_gazebo/worlds/: panda.world
zbot_franka_moveit/: CMakeLists.txt  package.xml
